httpserver.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webservice
  labels:
    kubernetes.io/metadata.name: webservice
