httpserver.service.yaml
apiVersion: v1
kind: Service
metadata:
  creatioonTimestamp: null
  labels:
    app: httpserver-app
  name: httpserver-app-service
  namespace: webservice
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpserver-app
  type: NodePort
status:
  loadBalancer: {}
